--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header class="header">
+        <nav class="header__menu">
+            <a class="header__menu__link">Home</a>
+            <a class="header__menu__link">Sobre mí</a>
+        </nav>
+    </header>
     <main class="presentacion">
         <section class="presentacion__contenido">
             <h1 class="presentacion__contenido__titulo">
@@ -30,6 +35,8 @@
             </section>    
     <img src="./assets/Principal.png" alt="Imagen de Ana Garcia trabajando">
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <p> Desarrollado por Ronald Varela </p>
+    </footer>
 </body>
 </html>  
