Comenzando a hacer el proyecto mas responsive

--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
                         Instagram</a>
                     <a class="presentacion__enlaces__link" href="https://www.github.com">
                         <img src="./assets/github.png">
-                        GitHub</a>                    
+                        GitHub</a>
+                    <a class="presentacion__enlaces__link" href="https://www.linkedin.com">
+                        <img src="./assets/linkedin.png">
+                        LinkedIn</a>                    
                 </div>
             </section>    
-    <img src="./assets/Principal.png" alt="Imagen de Ana Garcia trabajando">
+    <img class="presentacion__imagen"src="./assets/Principal.png" alt="Imagen de Ana Garcia trabajando">
     </main>
     <footer class="footer">
         <p> Desarrollado por Ronald Varela </p>
